--- a/delivery.html
+++ b/delivery.html
@@ -85,7 +85,7 @@ body{
   padding:14px;
 
   background:#1e293b;   /* dark blue */
-  color:#ffffff;        /* 🔥 ALL TEXT WHITE */
+  color:#e5e7eb;        /* 🔥 ALL TEXT WHITE */
 
   border-radius:14px;
   box-shadow:0 4px 14px rgba(0,0,0,.06);
