--- a/delivery.html
+++ b/delivery.html
@@ -130,29 +130,29 @@ body{
 /* ===================== STATUS COLORS (SOFT + CLEAR) ===================== */
 /* 🟠 PENDING */
 .status-pending{
-  background:#ffedd5;      /* soft but bright orange */
-  color:#9a3412;           /* dark readable text */
+  background:#ffedd5;      /* soft orange */
+  color:#0f172a;           /* 🔥 dark blue text */
   border:1px solid #fb923c;
 }
 
 /* 🔵 ASSIGNED */
 .status-assigned{
   background:#dbeafe;      /* light blue */
-  color:#1e3a8a;           /* deep blue text */
+  color:#0f172a;           /* 🔥 dark blue text */
   border:1px solid #60a5fa;
 }
 
 /* 🟢 DELIVERED */
 .status-delivered{
   background:#dcfce7;      /* fresh green */
-  color:#14532d;           /* dark green */
+  color:#0f172a;           /* 🔥 dark blue text */
   border:1px solid #4ade80;
 }
 
 /* ⚪ DEFAULT */
 .status-default{
   background:#e5e7eb;      /* light gray */
-  color:#111827;
+  color:#0f172a;           /* 🔥 dark blue text */
   border:1px solid #9ca3af;
 }
 
