--- a/delivery.html
+++ b/delivery.html
@@ -115,7 +115,7 @@ body{
   display:inline-flex;
   align-items:center;
   gap:4px;
-
+ color:#0f172a;
   padding:3px 8px;         /* 🔥 aur chhota */
   font-size:11px;          /* compact text */
   font-weight:600;
