--- a/delivery.html
+++ b/delivery.html
@@ -535,7 +535,7 @@ function renderOrders(list){
     <div class="card order">
 
       <!-- 🔥 COMPACT STATUS (WHOLESALER STYLE) -->
-      ${getStatusHTML(o.status, o.time)}
+      ${getStatusHTML(o.status, o.time, o.wholesalerLocation, o.retailerLocation)}
 
       <hr>
 
