--- a/delivery.html
+++ b/delivery.html
@@ -283,7 +283,23 @@ hr{
   <input id="deliveryCodeInput" placeholder="Enter delivery code">  
   <button class="btn done" onclick="submitDeliveryCode()">Submit</button>  
   <button class="btn" onclick="closeCodeModal()">Cancel</button>  
- </div>  
+ </div> 
+  <!-- 🌍 MAP MODAL -->
+<div class="modal" id="mapModal">
+  <div class="map-box">
+    <div class="map-header">
+      <b id="mapTitle">Live Location</b>
+      <button class="icon-btn" onclick="closeMapModal()">✖</button>
+    </div>
+
+    <iframe
+      id="mapFrame"
+      src=""
+      allowfullscreen
+      loading="lazy">
+    </iframe>
+  </div>
+</div>
 </div>  <script>  
 const API = "https://shopbacked-vmhs.onrender.com";  
 const DBID = localStorage.getItem("userId");  
