--- a/delivery.html
+++ b/delivery.html
@@ -269,6 +269,15 @@ hr{
   width:100%;
   border:none;
 }
+  .btn-map{
+  background:#1e293b;
+  color:#fff;
+  border:none;
+  padding:4px 7px;
+  border-radius:6px;
+  font-size:12px;
+  cursor:pointer;
+  }
 
 </style>  </head>  <body>  <div class="main">    <div class="top">  
     <h3>🚚 Delivery Partner</h3>  
