--- a/delivery.html
+++ b/delivery.html
@@ -325,8 +325,8 @@ hr{
   <button class="btn done" onclick="submitDeliveryCode()">Submit</button>  
   <button class="btn" onclick="closeCodeModal()">Cancel</button>  
  </div> 
-  <!-- 🌍 MAP MODAL -->
-<div class="modal" id="mapModal">
+ <!-- 🌍 MAP FULLSCREEN MODAL -->
+<div id="mapModal">
   <div class="map-box">
     <div class="map-header">
       <b id="mapTitle">Live Location</b>
