--- a/delivery.html
+++ b/delivery.html
@@ -434,15 +434,29 @@ async function openProfile(){
     </div>
   `;
 }
-  function openMapModalSimple(type, lat, lng){
-  alert(`🗺 Map clicked\nType:${type}\nLat:${lat}\nLng:${lng}`);
+  function openMapModalSimple(type, destLat, destLng){
 
-  if(!lat || !lng){
-    alert("❌ Location missing");
+  if(!liveLat || !liveLng){
+    alert("❌ Live location not available");
     return;
   }
 
-  const mapURL = `https://www.google.com/maps?q=${lat},${lng}&z=15&output=embed`;
+  if(!destLat || !destLng){
+    alert("❌ Destination location missing");
+    return;
+  }
+
+  // 🔥 GOOGLE MAPS ROAD NAVIGATION
+  const mapURL =
+    `https://www.google.com/maps/dir/?api=1` +
+    `&origin=${liveLat},${liveLng}` +
+    `&destination=${destLat},${destLng}` +
+    `&travelmode=driving`;
+
+  document.getElementById("mapTitle").innerText =
+    type === "wholesaler"
+      ? "🚚 Route to Wholesaler"
+      : "🏬 Route to Retailer";
 
   document.getElementById("mapFrame").src = mapURL;
   document.getElementById("mapModal").style.display = "block";
