--- a/delivery.html
+++ b/delivery.html
@@ -435,14 +435,11 @@ async function openProfile(){
   `;
 }
   function openMapModalSimple(type, destLat, destLng){
-  // agar live location null hai, turant fetch karo
   if(!liveLat || !liveLng){
     navigator.geolocation.getCurrentPosition(
       (pos)=>{
         liveLat = pos.coords.latitude;
         liveLng = pos.coords.longitude;
-
-        // phir map open karo
         openMapModalSimple(type, destLat, destLng);
       },
       (err)=>{
@@ -450,19 +447,13 @@ async function openProfile(){
       },
       { enableHighAccuracy:true, timeout:10000 }
     );
-    return; // wait karo
+    return;
   }
 
-  // ✅ LIVE LOCATION available → normal route
   const mapURL = `https://www.google.com/maps/dir/?api=1&origin=${liveLat},${liveLng}&destination=${destLat},${destLng}&travelmode=driving`;
 
-  document.getElementById("mapTitle").innerText =
-    type === "wholesaler"
-      ? "🚚 Route to Wholesaler"
-      : "🏬 Route to Retailer";
-
-  document.getElementById("mapFrame").src = mapURL;
-  document.getElementById("mapModal").style.display = "block";
+  // window.open se route kholna
+  window.open(mapURL, "_blank");
 }
 function closeMapModal(){
   document.getElementById("mapFrame").src = "";
