--- a/delivery.html
+++ b/delivery.html
@@ -434,26 +434,61 @@ async function openProfile(){
     </div>
   `;
 }
-  function openMapModalSimple(type, destLat, destLng){
+  let map, routeLayer;
+
+function openMapModalSimple(type, destLat, destLng){
+
   if(!liveLat || !liveLng){
     navigator.geolocation.getCurrentPosition(
-      (pos)=>{
+      pos=>{
         liveLat = pos.coords.latitude;
         liveLng = pos.coords.longitude;
         openMapModalSimple(type, destLat, destLng);
       },
-      (err)=>{
-        alert("❌ Live location not available: " + err.message);
+      err=>{
+        alert("❌ Live location not available");
       },
-      { enableHighAccuracy:true, timeout:10000 }
+      { enableHighAccuracy:true }
     );
     return;
   }
 
-  const mapURL = `https://www.google.com/maps/dir/?api=1&origin=${liveLat},${liveLng}&destination=${destLat},${destLng}&travelmode=driving`;
+  document.getElementById("mapModal").style.display = "block";
 
-  // window.open se route kholna
-  window.open(mapURL, "_blank");
+  setTimeout(()=>{
+    if(map) map.remove();
+
+    map = L.map("map").setView([liveLat, liveLng], 13);
+
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{
+      maxZoom:19
+    }).addTo(map);
+
+    // 🚚 Delivery Boy Marker
+    L.marker([liveLat, liveLng])
+      .addTo(map)
+      .bindPopup("🚚 You")
+      .openPopup();
+
+    // 🏬 Destination Marker
+    L.marker([destLat, destLng])
+      .addTo(map)
+      .bindPopup(type === "wholesaler" ? "🏪 Wholesaler" : "🏬 Retailer");
+
+    // 🔥 SIMPLE ROUTE LINE
+    routeLayer = L.polyline(
+      [[liveLat, liveLng],[destLat, destLng]],
+      { color:"blue", weight:5 }
+    ).addTo(map);
+
+    map.fitBounds(routeLayer.getBounds());
+
+  },300);
+}
+
+function closeMapModal(){
+  document.getElementById("mapModal").style.display = "none";
+  if(map) map.remove();
 }
 function closeMapModal(){
   document.getElementById("mapFrame").src = "";
