--- a/delivery.html
+++ b/delivery.html
@@ -4,8 +4,13 @@
 <title>Delivery Partner Dashboard</title>  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">  
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">    
+<!-- Leaflet CSS/JS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+<!-- Leaflet Routing Machine -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
+<script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
   <style>
   *{
   box-sizing:border-box;
@@ -430,49 +435,63 @@ async function openProfile(){
     </div>
   `;
 }
-let map, routeLayer;
+let map, routingControl;
 
 function openMapModalSimple(type, destLat, destLng){
   if(!liveLat || !liveLng){
     navigator.geolocation.getCurrentPosition(
-      pos=>{
+      (pos)=>{
         liveLat = pos.coords.latitude;
         liveLng = pos.coords.longitude;
         openMapModalSimple(type, destLat, destLng);
       },
-      err=>{
-        alert("❌ Live location not available");
+      (err)=>{
+        alert("❌ Live location not available: " + err.message);
       },
-      { enableHighAccuracy:true }
+      { enableHighAccuracy:true, timeout:10000 }
     );
     return;
   }
 
-  document.getElementById("mapModal").style.display = "block";
+  document.getElementById("mapTitle").innerText =
+    type === "wholesaler"
+      ? "🚚 Route to Wholesaler"
+      : "🏬 Route to Retailer";
 
-  setTimeout(()=>{
-    if(map) map.remove();
-    map = L.map("map").setView([liveLat, liveLng], 13);
+  document.getElementById("mapModal").style.display = "flex";
 
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",{
-      maxZoom:19
-    }).addTo(map);
+  // 🔹 Agar map pehle se exist karta hai, remove kar do
+  if(map) map.remove();
+  
+  // 🔹 Leaflet Map init
+  map = L.map('mapFrame', {
+    center: [liveLat, liveLng],
+    zoom: 13
+  });
 
-    // delivery marker
-    L.marker([liveLat, liveLng]).addTo(map).bindPopup("🚚 You").openPopup();
+  // 🔹 OpenStreetMap Tiles
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; OpenStreetMap contributors'
+  }).addTo(map);
 
-    // destination marker
-    L.marker([destLat, destLng]).addTo(map).bindPopup(type==="wholesaler"?"🏪 Wholesaler":"🏬 Retailer");
-
-    // route line
-    routeLayer = L.polyline([[liveLat, liveLng],[destLat, destLng]], { color:"blue", weight:5 }).addTo(map);
-
-    map.fitBounds(routeLayer.getBounds());
-  }, 300);
+  // 🔹 Routing
+  routingControl = L.Routing.control({
+    waypoints: [
+      L.latLng(liveLat, liveLng),
+      L.latLng(destLat, destLng)
+    ],
+    lineOptions: {
+      styles: [{color: '#2563eb', weight: 5}]
+    },
+    show: false, // hide itinerary panel
+    addWaypoints: false,
+    draggableWaypoints: false,
+    fitSelectedRoutes: true
+  }).addTo(map);
 }
 
 function closeMapModal(){
-  document.getElementById("mapModal").style.display="none";
+  document.getElementById("mapModal").style.display = "none";
   if(map) map.remove();
 }
 
