--- a/delivery.html
+++ b/delivery.html
@@ -340,7 +340,8 @@ hr{
       <b id="mapTitle">Live Location</b>
       <button onclick="closeMapModal()" style="color:white">✖</button>
     </div>
-    <div id="map" style="flex:1;"></div>
+    <!-- id ko mapFrame kar diya -->
+    <div id="mapFrame" style="flex:1;"></div>
   </div>
 </div>
   <script>  
