--- a/delivery.html
+++ b/delivery.html
@@ -287,6 +287,31 @@ hr{
   cursor: pointer;
   pointer-events: auto;
 }
+    html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#mapModal {
+  position: fixed;
+  inset: 0;
+  display: none;
+  z-index: 999;
+  height: 100%;
+  width: 100%;
+}
+
+#mapModal > div {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+#mapFrame {
+  flex: 1;
+  width: 100%;
+}
 </style>  </head>  <body>  <div class="main">    <div class="top">  
     <h3>🚚 Delivery Partner</h3>  
     <button class="icon-btn" onclick="openProfile()">  
@@ -334,14 +359,13 @@ hr{
 </div> 
   <!-- 🌍 MAP FULLSCREEN MODAL (BODY LEVEL) -->
 <!-- map modal -->
-<div id="mapModal" style="position:fixed; inset:0; display:none; z-index:999;">
-  <div style="height:100%; display:flex; flex-direction:column;">
+<div id="mapModal">
+  <div>
     <div style="background:#0f172a; color:#fff; padding:12px; display:flex; justify-content:space-between; align-items:center;">
       <b id="mapTitle">Live Location</b>
       <button onclick="closeMapModal()" style="color:white">✖</button>
     </div>
-    <!-- id ko mapFrame kar diya -->
-    <div id="mapFrame" style="flex:1;"></div>
+    <div id="mapFrame"></div>
   </div>
 </div>
   <script>  
