--- a/retailer.html
+++ b/retailer.html
@@ -578,7 +578,8 @@ border-radius: 4px;
 <div class="location-group">    
   <label>📍 Current Location (lat, lng)</label>    
   <input id="profileLocation" placeholder="Fetching location..." readonly>    
-  <button onclick="getRetailerLocation()">📌 Set Current Location</button>    
+  <button onclick="getRetailerLocation()">📌 Set Current Location</button>
+  <small id="locationTimer" style="color:#9ca3af; display:block; margin-top:6px;"></small>
 </div>    
     <button class="primary" onclick="saveProfile()">Save</button>    
     <button onclick="closeAll()">Close</button>    
